# clay

./: CMakeLists.txt  clay.h
examples/win32_gdi/: CMakeLists.txt  build.ps1  main.c
renderers/win32_gdi/: README.md  clay_renderer_gdi.c
